Added new files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="pagina.css"/>
+    <meta  name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="OIP.jpg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,7 +86,6 @@
             <tit>CakeSmash</tit>
             <ali>The first birthday of your little one is special. They are no longer babies, but also not quite toddlers. They explore the world and look at it with big eyes.
                 Celebrating this milestone with a Cake Smash Session is a fantastic way to remember it.
-                For a lot of babies the first birthday cake is the first cake they ever try.
             </ali>
         </iod>
         <a href="#preturile" class="pret"><price>129£</price></a>
@@ -101,8 +101,10 @@
                 <img src="cake/img5.jpg" class="carus" id="">
                 <img src="cake/img1.jpg" class="carus" id="lastclone">
             </div>
-            <prev></prev>
-            <next></next>
+            <butonase>
+                <prev></prev>
+                <next></next>
+            </butonase>
         </div>
     </div>
 </section>
@@ -118,8 +120,10 @@
                 <img src="born/img5.jpg" class="carus1" id="">
                 <img src="born/img1.jpg" class="carus1" id="lastclone1">
             </div>
-            <prev1></prev1>
-            <next1></next>
+            <butonase1>
+                <prev1></prev1>
+                <next1></next>
+            </butonase1>
         </div>
     </div22>
     <div11 class="sec1">
@@ -172,7 +176,7 @@
         </grid>
     </div>
     <div class="more">
-    <a href="https://www.instagram.com/dumitrumorteanu/" class="m">¿More?</a>
+    <a href="https://www.instagram.com/dumitrumorteanu/" class="m">MORE...</a>
     </div>
 </section>
 <section id="preturile">
