Added new files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@1,6..96,400;1,6..96,500&display=swap" rel="stylesheet">
-    <title>IDK</title>
+    <title>Dumitru Cristina</title>
 </head>
 <body>
 <loader>
@@ -53,20 +53,20 @@
    </div>
    <div class="sec2">
     <fotpar class="nothing">
-        <img loading="lazy" width="180" height="270" src="maternity/Maternity2.jpg" class="im2 images">
-        <img loading="lazy" width="180" height="270" src="maternity/Maternity3.jpg" class="im3 images">
-        <img loading="lazy" width="180" height="270" src="maternity/Maternity4.jpg" class="im4 images">
-        <img loading="lazy" width="180" height="270" src="maternity/Maternity1.jpg" class="im1 images">
+        <img loading="lazy" width="180" height="270" src="maternity/Maternity2.webp" class="im2 images">
+        <img loading="lazy" width="180" height="270" src="maternity/Maternity3.webp" class="im3 images">
+        <img loading="lazy" width="180" height="270" src="maternity/Maternity4.webp" class="im4 images">
+        <img loading="lazy" width="180" height="270" src="maternity/Maternity1.webp" class="im1 images">
     </fotpar>
 </div>
 </section >
 <section id="baptizm">
     <div2 class="sec2">
          <fotpa class="nothing">
-             <img loading="lazy" width="180" height="270" src="baptizm/img1.jpg" class="ium2 images">
-             <img loading="lazy" width="180" height="270" src="baptizm/img2.jpg" class="ium3 images">
-             <img loading="lazy" width="180" height="270" src="baptizm/img3.jpg" class="ium4 images">
-             <img loading="lazy" width="180" height="270" src="baptizm/img4.jpg" class="ium1 images">
+             <img loading="lazy" width="180" height="270" src="baptizm/img1.webp" class="ium2 images">
+             <img loading="lazy" width="180" height="270" src="baptizm/img2.webp" class="ium3 images">
+             <img loading="lazy" width="180" height="270" src="baptizm/img3.webp" class="ium4 images">
+             <img loading="lazy" width="180" height="270" src="baptizm/img4.webp" class="ium1 images">
          </fotpa>
      </div2>
      <div1 class="sec1">
@@ -93,13 +93,13 @@
     <div class="sec2">
         <div class="slide-container nothing" id="slide">
             <div class="image-slider">
-                <img src="cake/img5.jpg" class="carus" id="firstclone">
-                <img src="cake/img1.jpg" class="carus" id="">
-                <img src="cake/img2.jpg" class="carus" id="img2">
-                <img src="cake/img3.jpg" class="carus setare" id="img3">
-                <img src="cake/img4.jpg" class="carus" id="img4">
-                <img src="cake/img5.jpg" class="carus" id="">
-                <img src="cake/img1.jpg" class="carus" id="lastclone">
+                <img src="cake/img5.webp" class="carus" id="firstclone">
+                <img src="cake/img1.webp" class="carus" id="">
+                <img src="cake/img2.webp" class="carus" id="img2">
+                <img src="cake/img3.webp" class="carus setare" id="img3">
+                <img src="cake/img4.webp" class="carus" id="img4">
+                <img src="cake/img5.webp" class="carus" id="">
+                <img src="cake/img1.webp" class="carus" id="lastclone">
             </div>
             <butonase>
                 <prev></prev>
@@ -112,13 +112,13 @@
     <div22 class="sec2">
         <div class="slide-container1 nothing" id="slide1">
             <div class="image-slider1">
-                <img src="born/img5.jpg" class="carus1" id="firstclone1">
-                <img src="born/img1.jpg" class="carus1" id="">
-                <img src="born/img2.jpg" class="carus1" id="img2">
-                <img src="born/img3.jpg" class="carus1 setare" id="img3">
-                <img src="born/img4.jpg" class="carus1" id="img4">
-                <img src="born/img5.jpg" class="carus1" id="">
-                <img src="born/img1.jpg" class="carus1" id="lastclone1">
+                <img src="born/img5.webp" class="carus1" id="firstclone1">
+                <img src="born/img1.webp" class="carus1" id="">
+                <img src="born/img2.webp" class="carus1" id="img2">
+                <img src="born/img3.webp" class="carus1 setare" id="img3">
+                <img src="born/img4.webp" class="carus1" id="img4">
+                <img src="born/img5.webp" class="carus1" id="">
+                <img src="born/img1.webp" class="carus1" id="lastclone1">
             </div>
             <butonase1>
                 <prev1></prev1>
@@ -147,31 +147,31 @@
     </div>
     <div class="port2">
         <grid1 class="nothing">
-            <img class="griderer1" src="portofolio/img3.jpg" alt="">
-            <img class="griderer1" src="portofolio/img1.jpg" alt="">
-            <img class="griderer1" src="portofolio/img8.jpg" alt="">
-            <img class="griderer1" src="portofolio/img11.jpg" alt="">
-            <img class="griderer1" src="portofolio/img7.jpg" alt="">
-            <img class="griderer1" src="portofolio/img10.jpg" alt="">
-            <img class="griderer1" src="portofolio/img2.jpg" alt="">
+            <img class="griderer1" src="portofolio/img3.webp" alt="">
+            <img class="griderer1" src="portofolio/img1.webp" alt="">
+            <img class="griderer1" src="portofolio/img8.webp" alt="">
+            <img class="griderer1" src="portofolio/img11.webp" alt="">
+            <img class="griderer1" src="portofolio/img7.webp" alt="">
+            <img class="griderer1" src="portofolio/img10.webp" alt="">
+            <img class="griderer1" src="portofolio/img2.webp" alt="">
         </grid1>
         <grid>
             <div class="big1">
                 <div class="small1">
-                    <img class="gride" src="portofolio/img10.jpg" alt="">
+                    <img class="gride" src="portofolio/img10.webp" alt="">
                     <div class="smaller">
-                        <img class="grider" src="portofolio/img7.jpg" alt="">
-                        <img class="griderer" src="portofolio/img1.jpg" alt="">
+                        <img class="grider" src="portofolio/img7.webp" alt="">
+                        <img class="griderer" src="portofolio/img1.webp" alt="">
                     </div>
                 </div>
                 <div class="small2">
-                    <img class="gridererer" src="portofolio/img3.jpg" alt="">
+                    <img class="gridererer" src="portofolio/img3.webp" alt="">
                 </div>
             </div>
             <div class="big2">
-                <img class="griderer" src="portofolio/img8.jpg" >
-                <img class="griderer" src="portofolio/img11.jpg" >
-                <img class="gridere" src="portofolio/img2.jpg">
+                <img class="griderer" src="portofolio/img8.webp" >
+                <img class="griderer" src="portofolio/img11.webp" >
+                <img class="gridere" src="portofolio/img2.webp">
             </div>
         </grid>
     </div>
@@ -254,7 +254,7 @@
         <boii>
             <boi>✔1h session</boi>
             <boi>✔session in park/central London/office</boi>
-            <boi>✔20+ high resolution digital photos</boi>
+            <boi>✔15+ high resolution digital photos</boi>
             <boi>✔Edit with Photoshop</boi>
         </boii>
         <sub>
