--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <loader>
 </loader>
-<header>
+<header class="whiteenter">
     <block>
     <a href="#primaS" class="img1">
         <img class="img1" src="LOGO.png">
